# lambda-calc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: test.ipynb
src/lambda_calc/: ast.py  diagram.py  math.py  parser.py
test/: test_parser.py
